--- a/RandomChooser.csproj
+++ b/RandomChooser.csproj
@@ -7,6 +7,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>false</UseWindowsForms>
+
+  <AssemblyTitle>Random Chooser</AssemblyTitle>
+  <Description>This is a Random Chooser Applicationm, Easy to use, Expected to be Updated Soon.</Description>
+  <Company>St.Mary  St.Paul</Company>
+  <Product>Random Chooser</Product>
+  <Version>1.0.0.0</Version>
+  <FileVersion>1.0.0.0</FileVersion>
+
   </PropertyGroup>
 
   <ItemGroup>
