--- a/RandomChooser.csproj
+++ b/RandomChooser.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>false</UseWindowsForms>
+    <ApplicationIcon>Assets\Icons\app.ico</ApplicationIcon>
 
   <AssemblyTitle>Random Chooser</AssemblyTitle>
   <Description>This is a Random Chooser Applicationm, Easy to use, Expected to be Updated Soon.</Description>
@@ -21,10 +22,10 @@
 
   <ItemGroup>
     <None Remove="Assets\Fonts\Font Awesome 6 Free Regular.otf" />
+    <None Remove="Assets\Icons\app.ico" />
+    <None Remove="Assets\Icons\color-icon.png" />
+    <None Remove="Assets\Icons\monitors-icon.png" />
     <None Remove="Assets\Images\2monitors.png" />
-    <None Remove="Assets\Images\background.jpg" />
-    <None Remove="Assets\Images\ButtonAnimationFrames\Frame-1.png" />
-    <None Remove="Assets\Images\ButtonAnimationFrames\Frame-2.png" />
     <None Remove="Assets\Images\dice.png" />
     <None Remove="Assets\Images\dictionary.png" />
     <None Remove="Assets\Images\monitor.png" />
@@ -34,28 +35,29 @@
     <None Remove="Assets\Images\Sunny.jpg" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="Assets\Icons\app.ico" />
+    <Resource Include="Assets\Icons\color-icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Assets\Icons\monitors-icon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 
 
   <ItemGroup>
+    <EmbeddedResource Include="Assets\Audio\select.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Resource Include="Assets\Fonts\Font Awesome 6 Free Regular.otf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Assets\Fonts\Font Awesome 6 Free Solid.otf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Assets\Images\ButtonAnimationFrames\Frame-1.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Assets\Images\ButtonAnimationFrames\Frame-2.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
     <Resource Include="Assets\Images\dice.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Resource Include="Assets\Images\background.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
@@ -73,13 +75,7 @@
     <Resource Include="Assets\Images\moon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Assets\Images\ButtonAnimationFrames\night-sky.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
     <Resource Include="Assets\Images\sun.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Assets\Images\ButtonAnimationFrames\Sunny.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
